# VkLib

./: .gitignore  CMakeLists.txt  README.adoc  README.md
VkLib/: CMakeLists.txt
VkLib/src/: VkGraphics.cpp  VkLib.cpp  VkLib.h  VkLibCore.h
VkLibCheck/: CMakeLists.txt
VkLibCheck/src/: main.cpp
VkLibCore/src/: VkLibCoreGraphics.hpp
batch/: Compile-VkLib(x86-Debug).bat  Compile-VkLibCheck(x86-Debug).bat  Compile-VkLibCheck_x86-Debug.bat  Compile-VkLib_x86-Debug.bat
src/: CMakeLists.txt  main.cpp
src/VkLib/: VkLib.cpp  VkLib.h
